--- a/E.tex
+++ b/E.tex
@@ -23,53 +23,52 @@
 	recent studies have shown the potential vulnerability to adversarial perturbations among not only CNN but other deep neural networks.
 	This discovery is of substantial significance as the widely usage of Convolutional neural network targets tasks of extensive security concern
 	such as the CNN used in autonomous driving where the car might be crushed by slight modification of the environment. 
-	In this study, the defensive effect of distillation training for CNN is evaluated together with traditional trained CNN for MNIST task on a data set of 60,000 examples.
-	The result shows it is the temperature (T) of the softmax function of the output layer that plays an important role to reduce the adverserial gradient (by a factor of $10^{10}$ at $T=20$) and the success rate of adversarial attack (by a factor of 10 when $T=20$),
+	In this study, the defensive effect of distillation training for CNN is evaluated together with traditional trained CNN with and without temperature setting for MNIST task on a data set of 60,000 examples.
+	The result shows it is the temperature (T) of the softmax function of the output layer that turns out to be the main factor in reducing the adverserial gradient (by a factor of $10^{10}$ at $T=20$) and the success rate of adversarial attack (by a factor of 10 when $T=20$),
  rather than the distillation traininng technique claimed effective by other researchers.
 \end{abstract}
 \section{Introduction}
 Considering when humans learn to recognize the digits written on a piece of paper, the input is the "viewing" of that image or the pixels on the paper with someone by their side teaching them the right number that image represents.
-When people teach a computer how to do this by letting it learn the parameters characterizing such a task from a mass of data (hand written digits with labels) without explicitly crafting the algorithm, 
-a general neural network is always built with some initial parameters to be modified to fit the given data set and generalize well when applied to new data. Learning the hand written digits is a classical deep learning task widely refered to as MNIST, which is often done by convolutional neural networks (CNN).
+People can also teach a computer how to do this by buiding a deep neural network and let it learn the parameters characterizing such a task from a mass of data (hand written digits with labels) without explicitly crafting the algorithm.
+Normally, a deep neural network is built with some initial parameters to be modified to fit the given data set and to generalize well when applied to new data. Learning the hand written digits is a classical deep learning task widely refered to as MNIST, which is often done by convolutional neural networks (CNN).
 
 Ever since the introduction of convolutional neural networks for image processing tasks, the recognition accuracy has increased dramatically and achieved state-of-art accuracy in the past few years. Though computers now could outperform humans on this specific task,
-recent study has shown the lack of robustness of CNN againt adversarial perturbations which raises plenty of problems about its pragmatic application. 
+recent study has shown the lack of robustness of CNN against adversarial perturbations which raises plenty of problems about its pragmatic application. 
 
 Compared with training computers to solve MNIST problem, humans during training process could learn more information than the hard labels given, such as the similarities between different digits, 
 which is some information left out by traditional training with hard label. 
-Theoretically, a deep enough neural network could learn such extra information when trained on a large enough scale of data. Such a neural network does not exist so far due to the limited data people can obtain and computation constraint required to perform the training on such neural network, as there is considerable complexity even within the simplest learning task such as MNIST. Humans often make use of knowledge from a variety of areas such as math, culture or even their personal experience to deal with MNIST tasks. For example, people can easily recognize rotated hand-written digits right after the training of upright digits from geometry or arabs could find some correlation from their language etc.
-Thus, specifiing some hyperparameters of the training model is considerably neccesary for building a DNN to sole a realistic problem.
+Theoretically, a deep enough neural network could learn such extra information when trained on a large enough scale of data. Such an ideal neural network does not exist so far due to the limited data people can obtain and computation ability required to perform the training on such neural network, as there is considerable complexity even within the simplest learning task such as MNIST\cite{schmid}. Humans often make use of knowledge from a variety of areas such as math, culture or even their personal experience to deal with MNIST tasks. For example, people can easily recognize rotated hand-written digits right after the training of upright digits from geometry or arabs could find some correlation from their language etc.
+Thus, specifiing some hyperparameters of the training model is considerably neccesary for building a DNN to solev such a realistic problem.
 
 Though soft label method during training process has been suggested but crafting such soft label is also questionable as there is no general rule to create labels which perimetrize the relationship of hand-written digits falling into different categories as percieved by humans.
 It also requres a considerable amount of effort to do these tedious task without a systemetic rule, which disabeys the principle of machine learning that simply tries to avoid these tedious work.
-
-That is where distillation comes to the stage as to provide distilled labels from previously built CNN. The distilled labels can be considered as a kind of soft labels produced by computer, which labels each sample with a soft label using a traditional CNN. 
+This is where distillation comes to the stage as to provide distilled labels from previously built CNN. The distilled labels can be considered as a kind of soft labels produced by computer, which labels each sample with a soft label using a traditional or regular CNN without distillation or temperature setting. 
 Papernot, McDaniel and Wu etc. have claimed its effectiveness against adversarial perturbation from empirical study in \cite{Papernot}.
-In their work, they also applied a softmax output layer parametrized by a parameter called temperature, which turned out to be the most important factor reducing the success rate of adversarial attack in our study and the effectiveness of distillation solely becomes suspectable.
+In their work, they also applied a softmax output layer parametrized by a parameter called temperature, which turned out to be the most important factor reducing the success rate of adversarial attack in our study and thus the effectiveness of distillation solely becomes suspectable.
 
 From a set of distilled labels, a deep learning neural network can gain more information such as the relationship between different handwritten digits explicitly. However, the information extracted by the previously built CNN is indeed part of information of the dataset training that CNN.
 As a result, the distillation training method places a considerably rigorous requirement on the CNN that produces those distilled labels.
 Theoretically, CNN built upon distilled labels can never outperform the previously built CNN either in prediction accuracy or robustness against adversarial perturbations based on the assumption that these CNNs make best use of every sample in the dataset. 
-Though, it is of appreciable pragmatic significance as in reality, the dataset is always limited and the computational ability is just a trace of that of a human.
+Though, it is of appreciable pragmatic significance as in reality, the dataset is always limited and the computational ability is just a trace of that of human's brain.
 That is why distillation is initially used to train a deep learning neural network on a comparablly computational resource limited devices such as phones, which can then use the preprocessed or distilled labels produced from a DNN on a much powerful computer.
 
-In this paper, we investigated the effectiveness of distillation applied to the classical MNIST classification problem as a defense to adversarial perturbations. We adopted three different algorithms to craft adversarial samples and compared the success rate to make the CNN give a different prediction from the target.
-The traditional CNN with temperature control turned out to outperformed the CNN using distillation in both the robustness against adversarial perturbations and the prediction accuracy. 
+In this paper, we investigated the effectiveness of distillation applied to the classical MNIST classification problem as a defense to adversarial perturbations. We adopted three different algorithms to craft adversarial samples and compared the success rate to make the CNN produce a different prediction from the target.
+However, in our study, the traditional CNN with temperature control turned out to perform as well as or outperform the CNN using distillation in both the robustness against adversarial perturbations and the prediction accuracy. 
 
 \section{Convolutional Neural Networks for MNIST}
-MNIST is a database of 70,000 images of handwritten digits with the labels specifiing the numbers on each image percieved by humans\cite{MNIST}. MNIST as a subset of NIST contains normalized arrays of integers representing handwritten digits of 28 $\times$ 28 black and white pixels, along with a target integer indicating the number out of $0\sim 9$ the images represent.
+MNIST is a database of 70,000 images of handwritten digits with the labels specifiing the actual numbers on each image percieved by humans\cite{MNIST}. MNIST as a subset of NIST contains normalized arrays of integers representing handwritten digits of 28 $\times$ 28 black and white pixels, along with a target integer indicating the number out of $0\sim 9$ each image represents.
 The 70,000 examples are divided into a test set of 10,000 samples and a training set, which is further divided into a validation set of 10,000 samples and the rest as the actual training set of size 50,000.
 
-The architecture of the CNN used in this work resembles the CNN built by \cite{Papernot} in order to verify the effectiveness they claimed of distillation as a defense against deep neural networks.\cite{MNIST}
+The architecture of the CNN used in this work resembles the CNN built by \cite{Papernot} in order to verify the effectiveness they claimed of distillation as a defense to adversarial attacks against deep neural networks.\cite{MNIST} 
 
 \begin{center}
-\begin{table}
+	\begin{table}[h!]
 	{\large \textbf{Architecture of the CNN for MNIST}
 	\\}
 
 	\begin{tabular*}{\textwidth}{{c}{c}{c}}
 	\\ \hline \hline
-		Layer Type & nonlinearity &Characteristics\\ \hline
+		Layer Type & Nonlinearity &Characteristics\\ \hline
 		Input layer & N/A & N/A \\
 		Convolutional layer & Rectified linear unit & 32 filters ($3\times3$)\\
 		Convolutional layer & Rectifi3d linear unit & 32 filters ($3\times3$)\\
@@ -98,14 +97,15 @@ The architecture of the CNN used in this work resembles the CNN built by \cite{P
 		Batch & 128 samples\\
 		Epochs & 50 \\
 		Temperature (except for the standard CNN) & 20 \\ 
+		GPU model & NVIDIA GTX 1060 \\ hline
 		GPU generation toolkit & cuda-8.0 \\ \hline
 
 	\end{tabular*}
-	\caption{CNN architecture}
+	\caption{CNN architecture overview}
 \end{table}
 \end{center}
 
-The convolutional network above is implemented by the Lasagne\cite{Lasagne} which is built upon Theano\cite{Theano} to generate computational graph in order to accelerate computation during training and the later testing.
+The convolutional network above is implemented by Lasagne\cite{Lasagne} which is built upon Theano\cite{Theano} to generate computational graph in order to accelerate computation during training and the later testing.
 We adopted latest GPU generation code on NVIDIA GTX 1060 graphic card with 6 GB GDDR5 to reduce the time required for each training so as to be able to compare the robustness against adversarial perturbations when hyperparameters change.
 All the code used in this paper is available on github \url{https://github.com/songhobby/CNN.git}
 
@@ -116,17 +116,19 @@ Machine learning security is a recently emerging problem after the state-of-art 
 An \textbf{adversarial sample} is an input $x\prime$ obtained by some degree of perturbation from an input $x$ to a prediction model $M$ with $M(x)=y$, where $y$ is the target output, such that $M(x\prime) \ne y$.
 
 The following are examples of adversarial samples obtained from examples in the MNIST dataset by slight perturbations determined (see \textbf{Algorithm 1.}) from the gradient with respect to the cross-entropy (loss) of each sample on every pixel. 
-\newpage
 \begin{figure}[h!]
 	\begin{minipage}{0.5\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{sample_original1.png}
+		\caption{Original examples}
 	\end{minipage} \hfill
 	\begin{minipage}{0.5\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{sample_perturbed1.png}
+		\caption{Adversarial samples}
 	\end{minipage} 
 \end{figure}
+\newpage
 \begin{figure}[h!]
 	\begin{minipage}{0.5\textwidth}
 		\centering
@@ -140,15 +142,15 @@ The following are examples of adversarial samples obtained from examples in the 
 	\end{minipage}
 \end{figure}
 
-For traditional CNN, the success rate is $66\%$ with maximum 100 pixels perturbed using adversarial sample crafting \textbf{algorithm 1.}, more than $95\%$ by \textbf{algorithm 2.} and \textbf{algorithm 3.}.
+For traditional CNN, the success rate is $66\%$ with maximum 100 pixels perturbed using adversarial sample crafting \textbf{algorithm 1}, and the success rate of adversarial attacking is more than $95\%$ by \textbf{algorithm 2} and \textbf{algorithm 3} introduced in the following section.
 
 \subsection{Adversarial Sample Crafting Algorithms}
 \paragraph{Algorithm 1.}
 \begin{enumerate}
 
-\item Randomly select a sample input ( with its target output and make a copy of that input array denoted as $c$
+\item Randomly select a sample input with its target output and make a copy of that input array denoted as $c$
 
-\item Build a saliency map $S$ mapping each index $S[m][n]$ to the gradient of the cross-entropy (loss function) with respect to the corresponding input$c[m][n]$, which as a whole forms a 2D array. (see an example in \textbf{Appendix A}
+\item Build a saliency map $S$ mapping each index $S[m][n]$ to the gradient of the cross-entropy (loss function) with respect to the corresponding input $c[m][n]$, which as a whole forms a 2D array. (see an example in \textbf{Appendix A}
 
 \item Iterate for trial from $i=1$:
 
@@ -164,8 +166,10 @@ For traditional CNN, the success rate is $66\%$ with maximum 100 pixels perturbe
 		\end{enumerate}
 \end{enumerate}
 \end{enumerate}
+
 This algorithm was proposed by Papernot\cite{Papernot} in 2016 to simplify the process of crafting adversarial samples. It focuses solely on the pixels of positive large gradient with respect to the cross-entropy, but the information contained in the pixels with negative as large gradient is left out.
 In addition, this algorithm would fail when the gradient of original pixels picked by saliency map is close to the maximum.\cite{Papernot2}
+
 Let $Grad(x_[m][n])$ be the gradient of loss function on $[m][n]$ of the input array, we have 
 \begin{equation}
 	\Delta loss \approx Grad(x[m][n])\Delta x[m][n]
@@ -207,20 +211,20 @@ This algorithm captures most of the information in the input array as it makes u
 However, the computational cost or time efficiency cost is $\mathcal{O}(N+M)$ where $N$ is the length of the input array and $M$ is the limit of the number of pixels to be modified. 
 But the \textbf{algorithm 1} is of $\mathcal{O}(N)$ if we assume the cost for computing gradient on a piexel the same as the cost for evaluating the loss function once.
 
-We can actually sacrifice a little accuracy to obtain a $\mathcal{O}(N)$ efficiency.
+We can actually sacrifice a little accuracy to obtain a $\mathcal{O}(N)$ efficiency if we ignore the effect $\Delta x[m][n]$ has on $\Delta loss$ and only take into account the negative large gradient.
 
 \paragraph{Algorithm 3.}
 \begin{enumerate}
-\item Randomly select a sample input ( with its target output and make a copy of that input array denoted as $c$
+\item Randomly select a sample input with its target output and make a copy of that input array denoted as $c$
 
-\item Build a saliency map $S$ mapping each index $S[m][n]$ to the gradient of the cross-entropy (loss function) with respect to the corresponding input$c[m][n]$, which as a whole forms a 2D array. (see an example in \textbf{Appendix A}
+\item Build a saliency map $S$ mapping each index $S[m][n]$ to the gradient of the cross-entropy (loss function) with respect to the corresponding input $c[m][n]$, which as a whole forms a 2D array. (see an example in \textbf{Appendix A}
 
 \item Iterate for trial from $i=1$:
 
 \begin{enumerate}
 	\item Find the number $k_i[m][n]$ with maximum absolute value in the saliency map.
 
-	\item Set $k_i[m][n]$ to 0 and $c[m][n]$ to the 1(maximum) if $k_i[m][n] > 0$ and 0(minimum) otherwise ($k_i[m][n] < 0$).
+	\item Set $k_i[m][n]$ to 0 , and depending on the sign of $k_i[m][n]$, set $c[m][n]$ to 1 (the maximum) if $k_i[m][n] > 0$ and 0 (the minimum) otherwise ($k_i[m][n] < 0$).
 
 	\item Feed $c$ to the trained CNN and check if the output differs from the target output:
 		\begin{enumerate}
@@ -238,23 +242,21 @@ Based on \textbf{Algorithm 2.}, update the saliency maps each time an input arra
 \section{Temperature vs. Distillation against Adversarial Perturbations}
 
 \paragraph{Definition 2.}
-The \textbf{temperature} of a softmax layer (usually used as an output layerin DNN) is defined as the parameter $T$, which is greater than $1$, such that the softmax function with temperature becomes 
+The \textbf{temperature} of a softmax layer (usually used as an output layer of a DNN) is defined as the parameter $T$, which is greater than $1$, such that the softmax function with temperature becomes 
 \begin{equation}
 	f(\mathbf{x_i};T)=\frac{e^{\frac{\mathbf{x_i}}{T}}}{\sum_{j=1}^n 
 	e^{\frac{\mathbf{x_j}}{T}}}
 \end{equation}
 
-We can show that as temperature increases, the robustness or sensitivity to perturbations of pixels decreases tremendously.
+We can show that as temperature increases, the sensitivity to perturbations of pixels decreases tremendously.
 
 \paragraph{Proof 1.}
 Let $\mathbf{x}$ be the input vector to the softmax output layer and the target vector $\mathbf{y}$ is a one-hot vector with $1$ at $j$, $j\in{0,1,\dots 9}$ and $0$ for the rest indices.
 
 The loss function $L(\mathbf{x};T)$ is, for $\mathbf{y}_k=1$:
 
-\begin{equation}
-	L(\mathbf{x};T) = \frac{e^{\frac{\mathbf{x}_k}{T}}}{\sum_{j=0}^9 e^{\frac{\mathbf{x}_j}{T}}}
-\end{equation}
-\begin{align*}
+\begin{align}
+	L(\mathbf{x};T) &= \frac{\sum_{l=0}^9e^{\frac{\mathbf{x}_k}{T}}\mathbf{y}_l}{\sum_{j=0}^9 e^{\frac{\mathbf{x}_j}{T}}} = \frac{e^{\frac{\mathbf{x}_k}{T}}}{\sum_{j=0}^9 e^{\frac{\mathbf{x}_j}{T}}} \\
 	\frac{\partial L(\mathbf{x};T)}{\partial \mathbf{x}_i} &= 
 	\frac{1}{(\sum_{j=0}^9 e^{\frac{\mathbf{x}_j}{T}})^2}
 	(
@@ -262,13 +264,13 @@ The loss function $L(\mathbf{x};T)$ is, for $\mathbf{y}_k=1$:
 	\sum_{j=0}^9 e^{\frac{\mathbf{x}_j}{T}} 
 	+ e^{\frac{\mathbf{x}_k}{T}}
 	\frac{\partial \sum_{j=0}^9 e^{\frac{\mathbf{x}_j}{T}}}{\partial \mathbf{x}_i}
-	)\\
+	) \nonumber \\
 	&=
 	\frac{1}{T(\sum_{j=0}^9 e^{\frac{\mathbf{x}_j}{T}})^2} (
 	\delta_{ik} e^{\frac{\mathbf{x}_k}{T}}
 	\sum_{j=0}^9 e^{\frac{\mathbf{x}_j}{T}}+
-	e^{\frac{2\mathbf{x}_k}{T}} )\\
-\end{align*}
+	e^{\frac{2\mathbf{x}_k}{T}} ) \nonumber 
+\end{align}
 
 Since the input vector $\mathbf{x}$ is always close to 0,
 
@@ -276,7 +278,8 @@ Since the input vector $\mathbf{x}$ is always close to 0,
 	\frac{\partial L(\mathbf{x};T)}{\partial \mathbf{x}_i}
 	\approx \frac{\frac{\partial L(\mathbf{x};T=0)}{\partial \mathbf{x}_i}}{T} \text{ when } (\mid \mathbf{x}_i \mid \ll 1)
 \end{equation}
-When $T$ approaches $(T \rightarrow \infty)$ infinity, we have 
+
+Moreover, when $T$ approaches $(T \rightarrow \infty)$ infinity, we have 
 \begin{align*}
 	(\sum_{j=0}^9 e^{\frac{\mathbf{x}_j}{T}})^{2T} -
 	(\sum_{j=0}^9 e^{\mathbf{x}_j})^{2}
@@ -285,6 +288,7 @@ When $T$ approaches $(T \rightarrow \infty)$ infinity, we have
 	&\ge((\sum_{j=0}^9 e^{\frac{\mathbf{x}_j}{T}})^T+
 	\sum_{j=0}^9 e^{\mathbf{x}_j})\cdot 0 \ge 0 \hspace{10pt} (T > 1)\\
 	e^{\frac{\mathbf{x}_j}{T}} &\le e^{\mathbf{x}_j}\\
+	\text{Thus}\hspace{3cm} &\\
 	\frac{\partial L(\mathbf{x};T)}{\partial \mathbf{x}_i} &\le 
 	\frac{1}{T(\sum_{j=0}^9 e^{\mathbf{x}_j})^{\frac{2}{T}}} (
 	\delta_{ik} e^{\mathbf{x}_k}
@@ -301,42 +305,47 @@ The temperature as a term in denominator still determines the gradient when the 
 We chose the temperature at $t=20$ as it is an appropriate setting at which both relatively high prediction accuracy and robustness are achieved by papernot's empirical study\cite{Papernot}. Most importantly, large temperature induces disastrous underflow. 
 
 When the temperature is set to 20, the average gradient is already approximately $10^{-60}$. Only around $30\%$ percent of the sample can be used for numerical analysis. That is an important reason \textbf{algorithm 2.} is used in our work. 
-Though the computational cost is relatively high but it is the only algorithm that could be analyzed numerically without intricate modification of the computational graph.
+Though the computational cost is relatively high but it is the only algorithm that could be analyzed numerically without recompiling the code to obtain higher precision or intricate modification of the computational graph.
 
 \paragraph{Definition 3.} 
-\textbf{Distiallation training} is a procedure to, given a previously trained DNN model $M_1$ trained on target $y_1$, feed the same input $x$ to a learning model $M_2$ to fit the \textbf{distilled target} $y_2=M_1(x)$.\cite{Ba}
+\textbf{Distiallation training} is a procedure to, given a previously trained DNN model $M_1$ trained on original target $y_1$, feed the same input $x$ to a learning model $M_2$ to fit the \textbf{distilled target} $y_2=M_1(x)$.\cite{Ba}
 
-Distillation training was initially designed to train a deep learning neural network on a resource restricted device such as phones and tablets. As the computational cost is too high to feed a gigantic dataset to a DNN with moderate number of layers on such devices. 
-Distillation training makes use of the knowledge leared by another more powerful DNN and only use a subset of the database with distilled targets to solve supervised learning problems.
-As the distilled targets (such as soft labels) extracted more information from the database compared to original targets (such as hard labels), the distilled CNN could converge more rapidly by gradient descent or other optimization methods.
+Distillation training was initially designed to train a deep learning neural network on a resource restricted device such as phones and tablets. As the computational cost is too high to feed a gigantic database to a DNN with a large number of layers on such devices. 
+Distillation training makes use of the knowledge leared by another more powerful DNN and only use a small subset of the database with distilled targets to solve supervised learning problems.
+As the distilled targets (similar as soft labels) extracted more information from the database compared to original targets (similar with hard labels), the distilled CNN could converge more rapidly by gradient descent or other optimization methods.
+
+This could also raise problem while training as this might cause gradient explosion during the training and the training has to stop whenever this happens. This is usually handled by reducing the training rate or add a regularization term which decreases with time going.
 
 \section{Results and Discussion}
 
-\paragraph{Building CNN}The convolutional neural network chosen in our study is a based on the architecture used by Papernot\cite{Papernot}.
- But, to avoid gradient explosion occuring when calculating the Jacobian of the loss function with high temperature during testing process, the traning rate is reduced to a half.
+\paragraph{Building CNN}The convolutional neural network chosen in our study is based on the architecture used by Papernot\cite{Papernot}.
+ But, to avoid gradient explosion occuring when calculating the Jacobian of the loss function with high temperature during training process, the traning rate is reduced to a half.
 
 The testing accuracy for traditional training is \\
 \begin{equation}
 M_{std} \sim  99.57\%
 \end{equation}
-For distillation training using the same input with distilled targets produce by $M_{std}$, the testing accuracy is \\
+
+For distillation training using the same input as distilled targets produced by $M_{std}$, the testing accuracy is \\
 \begin{equation}
 M_{distill} \sim 99.07\%
 \end{equation}
-The comparison training $M_{std-T}$ is a traditional training model except for the output layer using softmax fuction at temperature $20$. After training it with the original targets, the testing accuracy is a bit higher than $M_{distill}$.
+
+The comparison training model $M_{std-T}$ is a traditional training model except for the output layer using softmax fuction at temperature $20$. After training it with the original targets, the testing accuracy is a bit higher than $M_{distill}$.
 \begin{equation}
 M_{std-T} \sim 99.34 \%
 \end{equation}
-All the three models generalize considerablly well, as proved by Papernot\cite{Papernot} using the theorems proved by Shalev\cite{Shalev}.
+
+All the three models generalize considerablly well, as proved by Papernot\cite{Papernot} using the theorems introduced by Shalev\cite{Shalev}.
 
 \paragraph{Crafting Adversarial Samples}
-We implemented \textbf{Algorithm 2.} to craft adversarial samples due to its relatively high success rate of crafting a adversarial sample which decieves a traditionally trained CNN , and most importantly to avoid underflow when calculating gradient on CNN with high temperature. Further study can attempt to implement \textbf{Algorithm 3.} which requires some intricate modification for building the computational graph.
+We implemented \textbf{Algorithm 2} to craft adversarial samples due to its relatively high success rate of crafting a adversarial sample which could decieves a traditionally trained CNN , and most importantly to avoid underflow when calculating gradient on CNN with high temperature. Further study can attempt to implement \textbf{Algorithm 3} which requires some intricate modification for building the computational graph.
 
-The adversarial attack success rate is around $rate_{std}=37\%$ for $M_{std}$ (39.01\% for $M_{distill}$ and 35.69\% for $M_{std-T}$ without excluding the samples causing $M_{distill}$ or $M_{std-T}$ to underflow). Similarly, $rate_{distill}=1.31\%$, $rate_{std-T}=0.81\%$. In summary:
+The success rate of adversarial attack against a standard or traditonal CNN $(M_{std})$ is around $rate_{std}=37\%$ (35.69\% for $M_{distill}$ and 35.69\% for $M_{std-T}$ in two empirical tests) without excluding the samples causing $M_{distill}$ or $M_{std-T}$ to underflow. Similarly, $rate_{distill}=1.31\%$, $rate_{std-T}=0.81\%$. In summary:
 
 \begin{table}[h!]
 
-{\large \textbf{Adversarial Attack Success Rate Comparison}}
+{\large \textbf{Adversarial Attacking Success Rate Comparison}}
 
 \medskip
 \begin{center}
@@ -344,7 +353,7 @@ The adversarial attack success rate is around $rate_{std}=37\%$ for $M_{std}$ (3
  \hline
 		\hspace{1.5cm} Model \hspace{1.5cm} & \hspace{1cm}Relative Attack Success Rate \hspace{1cm} \\ 
 \hline
-$M_{std}$ & $rate_{std}/rate_{std}=100$ \\ 
+$M_{std}$ & $rate_{std}/rate_{std}=1.00$ \\ 
 \hline 
 $M_{distill}$ & $rate_{std}/rate_{distill}=29.77$ \\ 
 \hline 
@@ -356,61 +365,64 @@ $M_{std-T}$ & $rate_{std}/rate_{std-T}=44.30$ \\
 \end{table}
 
 Here is an example showing the effectiveness of defense against adversarial attacks for different CNN models.
-
-We continue to perturb pixels one by one using \textbf{Algorithm 2.} until the prediction produced by the CNN model differs from the target value.
+We continue to perturb pixels one by one using \textbf{Algorithm 2} until the prediction produced by the CNN model differs from the target value.
 
 \begin{figure}[h!]
-	\begin{minipage}{0.3\textwidth}
+	\begin{minipage}{0.5\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{original1.png}
 		\caption{Original}
 	\end{minipage} \hfill
-	\begin{minipage}{0.3\textwidth}
+	\begin{minipage}{0.5\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{std1.png}
 		\caption{$M_{std}$}
 	\end{minipage} 
-	\begin{minipage}{0.3\textwidth}
+\end{figure}
+\newpage
+\begin{figure}[h!]
+	\begin{minipage}{0.5\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{distill1.png}
 		\caption{$M_{distill}$}
-	\end{minipage} \hfill
+	\end{minipage}
 \end{figure}
 
 \begin{figure}[h!]
-	\begin{minipage}{0.3\textwidth}
+	\begin{minipage}{0.5\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{O.png}
 		\caption{Original}
 	\end{minipage} \hfill
-	\begin{minipage}{0.3\textwidth}
+	\begin{minipage}{0.5\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{S.png}
 		\caption{$M_{std}$}
 	\end{minipage} 
-	\begin{minipage}{0.3\textwidth}
+	\begin{minipage}{0.5\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{T.png}
 		\caption{$M_{std-T}$}
 	\end{minipage} \hfill
 \end{figure}
 
-As illustrated by \textbf{Figure 3$\sim$k8}, the success rate to decieve a traditionally trained CNN is $66\%$ when the maximum pixels to perturb is set to 100.
+As illustrated by \textbf{Figure 3$\sim$8}, the success rate to decieve a traditionally trained CNN is $66\%$ when the maximum pixels to perturb is set to 100.
 While both distillation training and high temperature traditional training improve the robustness of the CNN against adversarial perturbation and reduce the success rate to $2.22\%$ for distillation training and $1.49\%$ for high temperature traditional training from our empirical study.
 
-Our empirical study suggests that the robustness against adversarial perturbation of the CNN trained by distillation at high temperature should result from the high temperature rather than the usage of distillation technique.
+Our empirical study suggests that the robustness against adversarial perturbation of the CNN trained by distillation at high temperature should result mainly from the high temperature rather than the usage of distillation technique.
 
 \section{Conclusion}
 
-To investigate the effectiveness of distillation as a defense to adversarial perturbation against convolutional neural network (CNN), we adopted the same CNN network used by \cite{Papernot} with tiny modification to avoid underflow during the testing process.
+To investigate the effectiveness of distillation as a defense to adversarial perturbation against convolutional neural network (CNN), we adopted the same CNN network used by \cite{Papernot} with modifications to avoid gradient explosion during training process and underflow during the testing process.
 
-A traditional CNN $M_{std}$ was trained as a blank model and model $M_{distill}$ was trained by distillation with the distilled targets produced by $M_{std}$.
-As a comparison, another CNN $M_{std-T}$ of the same architecture without distillation was trained at the same temperature as the distillation model.
-We implemented the adversarial sample crafting \textbf{Algorithm 2.} for relatively high success rate and low computational cost. Besides, this algorithm reduces the chance to underflow when evaluating saliency maps.
+A traditional CNN $M_{std}$ was trained as a blank comparison model and model $M_{distill}$ was trained by distillation with the distilled targets produced by $M_{std}$.
+As a comparison, another CNN $M_{std-T}$ of the same architecture without distillation was trained at the same temperature as the distillation model $(M_{distill})$.
+We implemented the adversarial sample crafting \textbf{Algorithm 2} for relatively high success rate and low computational cost. Besides, this algorithm reduces the chance to underflow when evaluating saliency maps.
 
-Our testing result shows that the two modified CNN models $M_{distill},M_{std-T}$ both generalize $(M_{distill} \sim 99.07\%$ , $(M_{std-T} \sim 99.34\%)$ well compared to traditional training $(99.57\%)$ with slight decrease. 
+Our testing result shows that the two modified CNN models $M_{distill},M_{std-T}$ both generalize $(M_{distill} \sim 99.07\%$ , $M_{std-T} \sim 99.34\%)$ well compared to traditional training $(99.57\%)$ with slight decrease. 
+However, both model $M_{distill}$ and $M_{std-T}$ improve the robustness of the CNN by almost the same amount with $M_{std-T}$ slightly more robust than $M_{distill}$. This result suggests that the temperature of the output sofmax layer plays the most important role in reducing the success rate of adversarial attacks. Therefore, it leaves the effectiveness of distillation training in question.
 
-However, both model $M_{distill}$ and $M_{std-T}$ improve the robustness of the CNN by almost the same amount with 
+Moreover, further study can investigate the robustness of CNN at much higher temperature $(T > 100)$ and test the adversarial sample crafting \textbf{Algorithm 3} with high precision and probably a certain amount of modifications to the building of computational graph.
 
 
 
@@ -503,6 +515,6 @@ $[$[ -6.82432352e-43  -3.63777081e-42  -1.27966576e-41  -3.99019738e-41\\
    -2.55598409e-38  -2.91966420e-38  -2.94271276e-38  -2.03610180e-38\\
  \dots \dots \dots $]]$\\
  \newpage
-\bibliography{Papernot,Papernot2,MNIST,Lasagne,Theano,Ba,Shalev} 
+\bibliography{Papernot,Papernot2,MNIST,Lasagne,Theano,Ba,Shalev,schmid} 
 \bibliographystyle{IEEEtran}
 \end{document}
